Skip to content
GitLab
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-shell gnome-shell
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,050
    • Issues 2,050
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 150
    • Merge requests 150
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • gnome-shellgnome-shell
  • Issues
  • #4720
Closed
Open
Issue created Oct 24, 2021 by Cédric M. Campos@vitaminace33

gnome-shell crashes when hiding a Guake terminal

Affected version

  • Manjaro (Pahvo) 21.1.6 (Kernel 5.13.19)
  • GNOME Shell 40.5
  • Xorg 1.20.13
  • glibc 2.33
  • Guake 3.7.0

Bug summary

GNOME Shell consistently crashes and dumps a core when hiding for the first time a Guake terminal.

This bug might be related to #3234 (closed) and #3278 (closed), but it is not a duplicate.

Steps to reproduce

  1. Start Guake.
  2. Show the Guake terminal (F12).
  3. Hide the Guake terminal (F12 or Control-D). GNOME Shell crashes and restarts.
  4. Show/hide repeatedly the Guake terminal (F12). Nothing happens but expected behavior.
  5. Close Guake (e.g. pkill guake)
  6. Go back to 1.

What happened

What did GNOME Shell do that was unexpected? Crash (at step 3).

What did you expect to happen

What did you expect GNOME Shell to do? Not crash (as in step 4).

Relevant logs, screenshots, screencasts etc.

As regular user
  • coredumpctl_gdb___bt_full.txt
  • coredumpctl_gdb___thread_apply_all_bt_full.txt (including symbols)
As root
  • root___gdb_which_pid.txt
  • root___coredumpctl_gdb___bt_full.txt
  • root___coredumpctl_gdb___thread_apply_all_bt_full.txt
Logs
  • journalctl.txt
  • Xorg.1.log
Edited Oct 24, 2021 by Cédric M. Campos
Assignee
Assign to
Time tracking